--- a/src/main/resources/assets/rifmod/lang/en_US.lang
+++ b/src/main/resources/assets/rifmod/lang/en_US.lang
@@ -1,1 +1,5 @@
+itemGroup.rifmod=RIF Mod
+
+tile.obsidianFrame.name=Obsidian Frame
 tile.rifDirt.name=Reinforced Dirt
+tile.rifStone.name=Reinforced Stone
